--- a/Resources/views/Default/_confirmed.html.twig
+++ b/Resources/views/Default/_confirmed.html.twig
@@ -63,7 +63,7 @@
 
 	<div class="col-xs-4">
 		<a href="{{ path('maci_order_admin_show_order', {'id': item.id}) }}" class="btn btn-default">Show</a>
-		<a href="{{ path('maci_admin_entity_remove', {'entity': 'order', 'id': item.id, 'redirect': 'maci_order_admin_confirmed'}) }}" class="btn btn-danger">Remove</a>
+		<a href="#" class="btn btn-danger">Remove</a>
 	</div>
 
 </div>
