--- a/Resources/views/Default/_order_cart_add_product.html.twig
+++ b/Resources/views/Default/_order_cart_add_product.html.twig
@@ -29,6 +29,7 @@
 
 {{ form_row(form.quantity) }}
 {{ form_row(form._token) }}
-{{ form_row(form.add_to_cart) }}
+
+<button id="cart_add_product_item_add_to_cart" class="btn-primary btn" type="submit" name="cart_add_product_item[add_to_cart]">{{ 'product.add_to_cart' | matra('Add to cart') }}</button>
 
 </form>
