--- a/Resources/views/Default/_show.html.twig
+++ b/Resources/views/Default/_show.html.twig
@@ -1,8 +1,6 @@
 
 <section class="cart-list">
 
-<h3>{{ 'menu.user.cart' | matra('My Cart') }}</h3>
-
 <div class="container-fluid">
 
 {% if order and order.items|length %}
@@ -13,12 +11,12 @@
 		<h4 class="order-show-title">{{ 'product.cart_title' | matra('Product') }}</h4>
 	</div>
 
-	<div class="col-xs-4 col-sm-2">
-		<h4 class="order-show-title">{{ 'product.price' | matra('Price') }}</h4>
-	</div>
-
 	<div class="col-xs-8 col-sm-3">
 		<h4 class="order-show-title">{{ 'product.quantity' | matra('Quantity') }}</h4>
+	</div>
+
+	<div class="col-xs-4 col-sm-2">
+		<h4 class="order-show-title">{{ 'product.price' | matra('Price') }}</h4>
 	</div>
 
 </div>
@@ -66,6 +64,15 @@
 
 	</div>
 
+	<div class="col-xs-12 col-sm-3">
+		{% if edit is defined and edit %}
+		{{ render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) }}
+		{{ render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) }}
+		{% else %}
+		<span class="order-item-quantity">{{ item.quantity }}</span>
+		{% endif %}
+	</div>
+
 	<div class="col-xs-12 col-sm-2">
 		{% if item.sale %}
 		<span class="product-sale">
@@ -77,18 +84,28 @@
 		</span>
 	</div>
 
-	<div class="col-xs-12 col-sm-3">
-		{% if edit is defined and edit %}
-		{{ render(controller('MaciOrderBundle:Default:editCartItem', { 'id': id, 'quantity': item.quantity } )) }}
-		{{ render(controller('MaciOrderBundle:Default:removeCartItem', { 'id': id } )) }}
-		{% else %}
-		<span class="order-item-quantity">{{ item.quantity }}</span>
-		{% endif %}
-	</div>
-
 </div>
 
 {% endfor %}
+
+
+{# DETAILS #}
+
+<div class="row cart-header">
+
+	<div class="col-xs-12 col-sm-5 col-sm-offset-2">
+		<h4 class="order-show-title">{{ 'product.cart_details' | matra('Details') }}</h4>
+	</div>
+
+	<div class="col-xs-8 col-sm-3">
+		<h4 class="order-show-title">{{ 'product.cart_description' | matra('Description') }}</h4>
+	</div>
+
+	<div class="col-xs-4 col-sm-2">
+		<h4 class="order-show-title">{{ 'product.price' | matra('Price') }}</h4>
+	</div>
+
+</div>
 
 
 {# SHIPPING COST #}
@@ -98,23 +115,23 @@
 <div class="row cart-footer">
 
 	<div class="col-xs-4 col-sm-3 col-sm-offset-2">
-		<span class="order-amount-label">{{ 'order.shipping' | matra('Shipping') }}</span>
+		<span class="order-shippingCost-label">{{ 'order.shipping' | matra('Shipping') }}</span>
 	</div>
 
-	<div class="col-xs-4 col-sm-2">
+	<div class="col-xs-4 col-sm-offset-2 col-sm-3">
 		{% if maci_orders.shippingsArray[order.shipping] is defined %}
-		<span class="order-amount-description">{{ ('order.shippings.' ~ order.shipping) | matra(maci_orders.shippingsArray[order.shipping].label) }}</span>
+		<span class="order-shippingCost-description">{{ ('order.shippings.' ~ order.shipping) | matra(maci_orders.shippingsArray[order.shipping].label) }}</span>
 		{% else %}
-		<span class="order-amount-description">{{ ('order.shippings.' ~ order.shipping) | matra(order.shipping) }}</span>
+		<span class="order-shippingCost-description">{{ ('order.shippings.' ~ order.shipping) | matra(order.shipping) }}</span>
 		{% endif %}
 	</div>
 
 	<div class="col-xs-4 col-sm-2">
-		<span class="order-amount-value">
+		<span class="order-shippingCost-value">
 			{% if 0 < order.shippingCost %}
 			{{ order.shippingCost | number_format(2, '.', ',') }} &euro;
 			{% else %}
-			0
+			&nbsp;
 			{% endif %}
 		</span>
 	</div>
@@ -132,19 +149,19 @@
 <div class="row cart-footer">
 
 	<div class="col-xs-4 col-sm-3 col-sm-offset-2">
-		<span class="order-amount-label">{{ 'order.payment' | matra('Payment') }}</span>
+		<span class="order-paymentCost-label">{{ 'order.payment' | matra('Payment') }}</span>
 	</div>
 
-	<div class="col-xs-4 col-sm-2">
-		{% if maci_orders.shippingsArray[order.payment] is defined %}
-		<span class="order-amount-description">{{ ('order.payments.' ~ order.payment) | matra(maci_orders.paymentsArray[order.payment].label) }}</span>
+	<div class="col-xs-4 col-sm-offset-2 col-sm-3">
+		{% if maci_orders.paymentsArray[order.payment] is defined %}
+		<span class="order-paymentCost-description">{{ ('order.payments.' ~ order.payment) | matra(maci_orders.paymentsArray[order.payment].label) }}</span>
 		{% else %}
-		<span class="order-amount-description">{{ ('order.payments.' ~ order.payment) | matra(order.payment) }}</span>
+		<span class="order-paymentCost-description">{{ ('order.payments.' ~ order.payment) | matra(order.payment) }}</span>
 		{% endif %}
 	</div>
 
 	<div class="col-xs-4 col-sm-2">
-		<span class="order-amount-value">
+		<span class="order-paymentCost-value">
 			{% if 0 < order.paymentCost %}
 			{{ order.paymentCost | number_format(2, '.', ',') }} &euro;
 			{% else %}
@@ -165,8 +182,8 @@
 
 	{% if edit is defined and edit %}
 
-	<div class="col-xs-6 col-sm-5 col-sm-offset-2">
-		<h4 class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }} ( {{ order.totalItemsQuantity }} {{ 'order.subtotal-items' | matra('Items') }} )</h4>
+	<div class="col-xs-6 col-sm-3 col-sm-offset-7">
+		<h4 class="order-amount-label">{{ 'order.subtotal' | matra('SubTotal') }} ( {{ order.totalItemsQuantity }} {{ 'order.subtotal-items' | matra('Items') }} ):</h4>
 	</div>
 
 	<div class="col-xs-6 col-sm-2">
@@ -175,8 +192,8 @@
 
 	{% else %}
 
-	<div class="col-xs-8 col-sm-5 col-sm-offset-2">
-		<h4 class="order-amount-label">{{ 'order.amount' | matra('Amount') }}</h4>
+	<div class="col-xs-8 col-sm-3 col-sm-offset-7">
+		<h4 class="order-amount-label">{{ 'order.amount' | matra('Amount') }}:</h4>
 	</div>
 
 	<div class="col-xs-4 col-sm-2">
@@ -195,4 +212,3 @@
 </div>
 
 </section>
-
