--- a/Resources/views/Default/confirmed.html.twig
+++ b/Resources/views/Default/confirmed.html.twig
@@ -1,5 +1,5 @@
 
-{% extends "MaciOrderBundle::layout.html.twig" %}
+{% extends "MaciOrderBundle::layout_admin.html.twig" %}
 
 
 {% block title %}
@@ -20,6 +20,3 @@
 </section>
 
 {% endblock %}
-
-
-
