--- a/Resources/views/Default/_show_addresses.html.twig
+++ b/Resources/views/Default/_show_addresses.html.twig
@@ -6,7 +6,7 @@
 
 <div class="col-xs-12 col-sm-6">
 
-	<h4>Shipping Address:</h4>
+	<h4>Shipping Address</h4>
 
 	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.shippingAddress } %}
 
@@ -19,7 +19,7 @@
 
 <div class="col-xs-12 col-sm-6">
 
-	<h4>Billing Address:</h4>
+	<h4>Billing Address</h4>
 
 	{% include "MaciAddressBundle:Default:_item.html.twig" with { 'address': order.billingAddress } %}
 
