--- a/Resources/views/Default/show.html.twig
+++ b/Resources/views/Default/show.html.twig
@@ -1,5 +1,5 @@
 
-{% extends "MaciOrderBundle::layout.html.twig" %}
+{% extends "MaciOrderBundle::layout_admin.html.twig" %}
 
 
 {% block title %}
@@ -11,14 +11,6 @@
 
 {% block content %}
 
-<h3>{{ 'order.show_title' | matra('Order Details') }}</h3>
-
-<h4>{{ 'order.code' | matra('Order Identifier') }}: {{ order.code }}</h4>
-
-{% include "MaciOrderBundle:Default:_show_addresses.html.twig" with { 'order': order } %}
-
-<h4>{{ 'order.items' | matra('Order Items') }}</h4>
-
-{% include "MaciOrderBundle:Default:_show.html.twig" with { 'order': order, 'edit': edit } %}
+{% include "MaciOrderBundle:Default:_preview.html.twig" with { 'order': order, 'edit': edit } %}
 
 {% endblock %}
