--- a/Resources/views/Email/confirmation_email.html.twig
+++ b/Resources/views/Email/confirmation_email.html.twig
@@ -117,10 +117,7 @@ td > table {
 			{% endif %}
 		</td>
 		<td>
-			{{ item.product }}<br/>
-			{% for variant in item.variants %}
-			<span>{{ variant }}</span>
-			{% endfor %}
+			{{ item.product }}
 		</td>
 		<td>
 			{{ item.quantity }}
