--- a/Resources/views/Default/_order_cart_add_product.html.twig
+++ b/Resources/views/Default/_order_cart_add_product.html.twig
@@ -1,13 +1,17 @@
 
-<form class="maci_cart_add_product" action="{{ path('maci_order_cart_add', {'product': product.id}) }}" method="post">
+<form {{ ( product ? ('id="maci_cart_add_product_' ~ product.id ~ '"')|raw ) }} class="maci_cart_add_product" action="{{ path('maci_order_cart_add') }}" method="POST">
 
-<div class="form-group">
-	{{ form_errors(form) }}
-</div>
+	{% if not form.vars.valid %}
+	<div class="form-group">
+    	{{ form_errors(form) }}
+	</div>
+	{% endif %}
 
-{{ form_row(form.quantity) }}
-{{ form_row(form._token) }}
+	{{ form_row(form.product) }}
 
-<button id="cart_add_product_item_add_to_cart" class="btn-primary btn" type="submit" name="cart_add_product_item[add_to_cart]">{{ 'product.add_to_cart' | matra('Add to cart') }}</button>
+	{{ form_row(form.quantity) }}
+	{{ form_row(form._token) }}
+
+	{{ form_row(form.add_to_cart) }}
 
 </form>
